crates/tokmd-fun/tests/snapshots/snapshots__snapshot_midi_chord.snap
---
source: crates/tokmd-fun/tests/snapshots.rs
expression: "midi_hex(&notes, 120)"
---
4d 54 68 64 00 00 00 06 00 00 00 01 01 e0 4d 54 72 6b 00 00 00 20 00 ff 51 03 07 a1 20 00 90 3c 64 00 40 64 00 43 64 87 40 80 3c 00 00 40 00 00 43 00 00 ff 2f 00
