crates/tokmd-fun/tests/snapshots/snapshots__snapshot_midi_scale_fragment.snap
---
source: crates/tokmd-fun/tests/snapshots.rs
expression: "midi_hex(&notes, 100)"
---
4d 54 68 64 00 00 00 06 00 00 00 01 01 e0 4d 54 72 6b 00 00 00 38 00 ff 51 03 09 27 c0 00 90 3c 50 83 10 80 3c 00 50 90 3e 50 83 10 80 3e 00 50 90 40 50 83 10 80 40 00 50 90 41 50 83 10 80 41 00 50 90 43 50 83 10 80 43 00 00 ff 2f 00
