crates/tokmd-fun/tests/snapshots/snapshots__snapshot_obj_single_unit_cube.snap
---
source: crates/tokmd-fun/tests/snapshots.rs
expression: output
---
# tokmd code city
o cube
v 0 0 0
v 1 0 0
v 1 1 0
v 0 1 0
v 0 0 1
v 1 0 1
v 1 1 1
v 0 1 1
f 1 2 3 4
f 5 6 7 8
f 1 2 6 5
f 2 3 7 6
f 3 4 8 7
f 4 1 5 8
